--- a/index.html
+++ b/index.html
@@ -13,17 +13,51 @@
 </head>
 <body>
 
-    <header>
-        <div>
-            <div>
-                <img src="Asset/foto.jpg" alt="Foto de perfil de Arthur">
-            </div>
-            <div>
-                <h3>Hello World! Meu nome é Arthur Souza e sou</h3>
+    <header id="top" class="container grid">
+        <div class="grid top">
+            <section id="avatar" class="grid">
+                <div class="foto">
+                    <img src="Asset/foto.jpg" alt="Foto de perfil de Arthur">
+                </div>
+                 <div class="code">
+                    <img src="Asset/code-solid.svg" alt="">
+                 </div>
+            </section>
+            <section id="title-text">
+                <h3>Hello World! Meu nome é <span>Arthur Souza</span> e sou</h3>
                 <h1>Desenvolvendor Fullstack</h1>
-                <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
-            </div>
+                <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+            </section>
 
+            <section id="tags" class="grid ">
+
+                <div class="tag">
+                    <img src="Asset/GitHub.svg" alt="">
+                    <p>GitHub</p>
+                </div>
+                <div class="tag">
+                    <img src="Asset/HTML.svg" alt="">
+                    <p>HTML</p>
+                </div>
+                <div class="tag">
+                    <img src="Asset/CSS.svg" alt="">
+                    <p>CSS</p>
+                </div>
+                <div class="tag">
+                    <img src="Asset/JavaScript.svg" alt="">
+                    <p>JavaScript</p>
+                </div>
+                <div class="tag">
+                    <img src="Asset/React.svg" alt="">
+                    <p>React</p>
+                </div>
+    
+                <div class="tag">
+                    <img src="Asset/Node.js.svg" alt="">
+                    <p>Node.js</p>
+                </div>
+
+            </section>
 
         </div>
     </header>
