--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
         </div>
     </header>
 
-    <section id="projetos">
-        <div class="text-projetos">
+    <section id="projetos" class="container">
+        <div class="title-secundario">
             <h3>Meu trabalho</h3>
             <h2>Veja os projetos em destaque</h2>
         </div>
 
-        <div class="grid container">
+        <div class="grid">
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-01.png" alt="">
                 <div>
-                    <h2>Travelgram</h2>
+                    <h2 class="h2-alternativo">Travelgram</h2>
                      <p>Rede social onde as pessoas mostram os <br> registros de suas viagens pelo mundo</p>
                 </div> 
             </div>
@@ -84,7 +84,7 @@
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-02.png" alt="">
                 <div>
-                    <h2>Tech News</h2>
+                    <h2 class="h2-alternativo">Tech News</h2>
                     <p>Homepage de um portal de notícias sobre a <br> área de tecnologia</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-03.png" alt="">
                 <div>
-                    <h2>Página de receita</h2>
+                    <h2 class="h2-alternativo">Página de receita</h2>
                     <p>Página com o passo a passo de uma receita <br> para cupcakes</p>
                 </div>
             </div>
@@ -100,7 +100,7 @@
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-04.png" alt="">
                 <div>
-                    <h2>Zingen</h2>
+                    <h2 class="h2-alternativo">Zingen</h2>
                     <p>Landing Page completa e responsiva de um <br> aplicativo de Karaokê</p>
                 </div>
             </div>
@@ -108,7 +108,7 @@
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-05.png" alt="">
                 <div>
-                    <h2>Refund</h2>
+                    <h2 class="h2-alternativo">Refund</h2>
                     <p>Um sistema para pedido e acompanhamento <br> de reembolso</p>
                 </div>
             </div>
@@ -116,12 +116,48 @@
             <div class="aprsentação">
                 <img src="Asset/Thumbnail_Project-06.png" alt="">
                 <div>
-                    <h2>Página de turismo</h2>
+                    <h2 class="h2-alternativo">Página de turismo</h2>
                     <p>Página com as principais informações para <br> quem quer viajar para Busan</p>
                 </div>
             </div>
         </div>
 
+    </section>
+
+    <section id="portifolio">
+        <div class="container">
+            <div class="title-secundario">
+                <h3>Meus serviços</h3>
+                <h2>Como posso ajudar o seu negócio</h2>
+            </div>
+
+            <div class="expositor grid">
+                <div class="expositores">
+                    <img src="Asset/Devices.svg" alt="">
+                    <div>
+                        <h2 class="h2-alternativo">Websites e Aplicativos</h2>
+                        <p>Desenvolvimento de interfaces</p>
+                    </div>
+                </div>
+    
+                <div class="expositores">
+                    <img src="Asset/HardDrives.svg" alt="">
+                    <div>
+                        <h2 class="h2-alternativo">API e banco de dados</h2>
+                        <p>Criação de serviços do sistema </p>
+                    </div>
+                </div>
+    
+                <div class="expositores">
+                    <img src="Asset/Infinity.svg" alt="">
+                    <div>
+                        <h2 class="h2-alternativo">DevOps</h2>
+                        <p>Gestão e infraestrutura da aplicação</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
