--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-    <header id="top" class="grid container-img">
-        <img class="container-img absolute" src="Asset/Background_Contacts.png" alt="">
-        <div class="grid top relative">
+    <img class="container-img" src="Asset/Background_Contacts.png" alt="">
+    <header id="top" class="grid">
+        <div class="grid top">
             <section id="avatar" class="grid">
                 <div class="foto">
                     <img src="Asset/foto.jpg" alt="Foto de perfil de Arthur">
@@ -59,14 +59,13 @@
                 </div>
 
             </section>
-
-            <div class="arrow">
-                <img src="Asset/icons/header/arrow.svg" alt="">
-            </div>
-
         </div>
     </header>
-
+   
+    <div class="arrow container-img float-none">
+        <img src="Asset/icons/header/arrow.svg" alt="">
+    </div>
+    
     <section id="projetos" class="container">
         <div class="title-secundario padding-56">
             <h3>Meu trabalho</h3>
