tentei nao consegui só falta a img de fundo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <img class="container-img" src="Asset/Background_Contacts.png" alt="">
+    <div class="box"></div>
     <header id="top" class="grid">
         <div class="grid top">
             <section id="avatar" class="grid">
